@@ -1,16 +1,10 @@
 TODO
 ====
 
-finish docs
+FINISH DOCS
+    * docs for properties (array.space, atom.is_dual, array.nparray)
+    * better way to run Sage doctests?
 
-* docs for properties (array.space, atom.is_dual, array.nparray)
-* better way to run Sage doctests?
-
-features
-
-* matrix pow
-
-fixes
-
-* make sure pickle is done right
-* use singletons for HilbertAtom and HilbertBaseField (and make pickle restore the singletons)
+FIXES
+    * make sure pickle is done right
+    * use singletons for HilbertAtom and HilbertBaseField (and make pickle restore the singletons)
