@@ -6,6 +6,7 @@ Version 0.5 (ongoing):
 	Diagonal matrix factory function
 	random_array gives complex values
 	0-d arrays always have int size (not 1.0)
+	Matrix pow operator
 
 Version 0.4 (2011-03-13):
 	Don't test for Sage on every base_field_lookup call
